# smooth-operator-core

./: .gitignore  CHANGELOG.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.changeset/: agent-activities-drive-turn.md  agent-executor-seam.md  core-prepack-build.md  dotnet-max-tokens-model-ceiling-clamp.md  lockstep-1-7-0.md  max-tokens-model-ceiling-clamp.md  migrate-ts-engine.md  polyglot-lockstep-publish.md  publish-crate-workflow.md  py-max-tokens-model-ceiling-clamp.md  py-permission-deny-policy.md  python-sep-extension-host.md  readme-story-permissions.md  rust-deny-policy.md  sep-dotnet-extension-host.md  sep-go-extension-host.md  sep-phase0-engine-host.md  sep-phase1-engine.md  sep-phase2-engine.md  sep-phase3-ui-capabilities.md  sep-phase4-commands-session-reload.md  sep-phase7-provider-host.md  sep-phase8-engine.md  sep-tool-call-modify-guard.md  sep-ts-extension-host.md  strip-harness-from-engine.md  structured-output.md  temporal-agent-turn-workflow.md  temporal-durable-timers.md  temporal-executor-crate.md  temporal-hitl-signals.md  th-10eb50-redaction-seam.md  th-210910-ext-hardening.md  th-22bfc1-allow-list.md  th-25ce5c-agent-user-images.md  th-25ce5c-multimodal-content.md  th-5f7227-sep-narc-scan.md  th-64b1ee-tool-search-audit.md  th-6b3ab4-interactive-ask.md  th-a62075-sandbox-design.md  (+4 more)
.claude/: settings.json
.github/workflows/: dotnet-checks.yml  go-checks.yml  pr-checks.yml  publish-crate.yml  publish-npm.yml  publish-nuget.yml  publish-pypi.yml  py-checks.yml  release.yml  ts-checks.yml
docs/: Extension-Sandboxing-Design.md  Polyglot-Engines.md
dotnet/: README.md  SmooAI.SmoothOperator.Core.slnx
dotnet/core/: README.md
go/: README.md  e2e_live_test.go  go.mod  go.sum  version.go
go/core/: README.md  agent.go  agent_test.go  cast.go  cast_test.go  ceiling_test.go  checkpoint.go  checkpoint_test.go  compaction.go  compaction_test.go  cost.go  cost_test.go  deny_policy.go  deny_policy_test.go  evals_test.go  human_gate.go  human_gate_test.go  knowledge.go  llm_provider.go  llm_provider_test.go  memory.go  memory_test.go  openai.go  parallel_tools_test.go  permission.go  permission_agent_test.go  permission_gate.go  permission_grants.go  (+18 more)
python/: README.md
python/core/: README.md  pyproject.toml
python/core/src/smooth_operator_core/: __init__.py  agent.py  cast.py  checkpoint.py  compaction.py  cost.py  deny_policy.py  hooks.py  human_gate.py  knowledge.py  llm_provider.py  memory.py  permission.py  permission_grants.py  rerank.py  thread.py  tool_search.py  vector.py  workflow.py
python/core/src/smooth_operator_core/extension/: __init__.py  host.py  manifest.py  process.py  protocol.py  tool_proxy.py
python/core/tests/: test_agent.py  test_cast.py  test_checkpoint.py  test_compaction.py  test_cost.py  test_deny_policy.py  test_evals.py  test_extension_conformance.py  test_extension_host.py  test_extension_integration.py  test_extension_manifest.py  test_extension_process.py  test_extension_protocol.py  test_human_gate.py  test_llm_provider.py  test_max_tokens_ceiling.py  test_memory.py  test_parallel_tools.py  test_permission.py  test_permission_grants.py  test_permission_wiring.py  test_rerank.py  test_retry.py  test_stream.py  test_subagent.py  test_thread.py  test_tool_hooks.py  test_tool_search.py  test_vector.py  test_workflow.py
python/core/tests/sep/: echo_peer.py
rust/: Cargo.toml  rustfmt.toml
rust/smooth-operator-core/: Cargo.toml  LICENSE  README.md
rust/smooth-operator-core/builtin-skills/create-skill/: SKILL.md
rust/smooth-operator-core/src/: activities.rs  agent.rs  checkpoint.rs  coding_workflow.rs  conversation.rs  deny_policy.rs  executor.rs  human.rs  lib.rs  llm.rs  llm_provider.rs  narc.rs  permission.rs  permission_grants.rs  providers.rs  quirks.rs  resolution.rs  sep_echo_peer.rs  tool.rs  tool_search.rs  workflow.rs  ws_resilience.rs
rust/smooth-operator-core/src/cast/: dispatch.rs  mod.rs
rust/smooth-operator-core/src/cast/prompts/: chief.txt  fixer.txt  heckler.txt  oracle.txt  presser.txt  recapper.txt  runner.txt  tagger.txt
rust/smooth-operator-core/src/extension/: host.rs  manifest.rs  mod.rs  process.rs  protocol.rs  provider_proxy.rs  tool_proxy.rs
rust/smooth-operator-core/tests/: readme_snippets.rs  sep_agent_integration.rs  sep_command_reload.rs  sep_conformance.rs  sep_phase8_path.rs  sep_process.rs  sep_provider_path.rs  sep_tool_path.rs  sep_ui_path.rs
rust/smooth-operator-core/tests/sep/: fixtures.json
rust/smooth-operator-temporal/: Cargo.toml
rust/smooth-operator-temporal/src/: dto.rs  lib.rs  temporal.rs
rust/smooth-operator-temporal/tests/: agent_turn_e2e.rs  durable_timer_e2e.rs  health_workflow_e2e.rs  hitl_signals_e2e.rs
scripts/: ci-publish.mjs  ci-version.mjs  sync-versions.mjs
spec/: README.md  envelope.schema.json
(+188 files in other folders)
